# lattice-anonymous-credentials

./: .gitignore
code/: CMakeLists.txt
code/bench/: bench_show.c
code/entities/: CMakeLists.txt  README.md
code/entities/common/: revac_labrador_bridge.c  revac_labrador_bridge.h  revac_proof_codec.c  revac_proof_codec.h  revocable_ac.c  revocable_ac.h
code/entities/common/core/flint_headers/flint/: flint-config.h  flint.h
code/entities/common/core/include/: acc_genpp.h  osig.h  params.h  revac_ta.h  revac_uav.h  revocable_ac.h  sep.h  show.h
code/entities/common/core/include/arith/arith_q/: poly_q.h  poly_q_sampling.h  poly_q_vec_d.h
code/entities/common/core/src/: acc_genpp.c  osig.c  sampling.c  show.c  show_proof_verify.c  show_prove.c
code/entities/common/core/src/arith/arith_q/: poly_q_sampling.c
code/entities/common/core/src/arith/arith_qshow/: poly_qshow.c
code/entities/gcs/: revac_gcs.c  revac_gcs.h
code/entities/ta/: revac_ta.c  revac_ta.h
code/entities/test/: revac_acc_memver_export.c  revac_proof_codec_demo.c  revocable_ac_demo.c  revocable_show_handle_demo.c
code/entities/uav/: CMakeLists.txt  revac_uav.c  revac_uav.h  uav_demo.c
code/entities/zk_lazer/: Makefile  README.md  revac_acc_memver_full_layout.py  revac_acc_memver_import_labrador.py  revac_memver_quadratic_demo.py  revac_same_x_demo.py  revac_show_labrador_skeleton.py  revac_show_relation.py
code/include/: acc_genpp.h  huffman_compress.h  params.h  revac_gcs.h  sep_tsampler.h  show.h  tsampler_helpers.h  tsampler_params.h  tsampler_sampling.h  tsampler_sign.h
code/src/: Makefile  acc_genpp.c  bench  cmake_install.cmake  covariance.c  huffman_compress.c  huffman_test  lnp22_test  osig_prove.c  sep.c  sep_tsampler.c  show.c  show_proof_verify.c  show_prove.c  test  tsampler_helpers.c  tsampler_sampling.c  tsampler_sign.c
code/src/arith/arith_q/: poly_q.c  poly_q_vec_d.c
code/test/: acc_test.c  huffman_test.c  lnp22_test.c  main.c  proof_witness_hex.txt  revocable_ac_test.c  tsampler_test.c
scripts/: huffman_compress.py
